metadata/sf-prod/force-app/main/default/objects/Task_Dispatcher__c/Task_Dispatcher__c.object-meta.xml
<CustomObject>
    <label>Task Dispatcher</label>
    <nameField>
        <label>Task Dispatcher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Dispatchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>