metadata/sf-prod/force-app/main/default/objects/Task_Dispatcher__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If not active it will not be processed</description>
    <inlineHelpText>If not active it will not be processed</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>