metadata/sf-prod/force-app/main/default/objects/Task_Dispatcher__c/fields/Assign_to_Users_in_a_Role__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Users_in_a_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the task dispatcher will ignore opportunity owners and create tasks to users in the specified roles using round-robin.</description>
    <inlineHelpText>If checked, the task dispatcher will ignore opportunity owners and create tasks to users in the specified roles using round-robin.</inlineHelpText>
    <label>Role-Based Assignment</label>
    <type>Checkbox</type>
</CustomField>