metadata/sf-prod/force-app/main/default/objects/Task_Dispatcher__c/fields/Backlog_Report_IDs__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Report_IDs__c</fullName>
    <label>Work Unit Backlog Report IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>