metadata/sf-prod/force-app/main/default/objects/Task_Dispatcher__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Order of execution of task dispatcher</description>
    <inlineHelpText>Order of execution of task dispatcher</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>