metadata/sf-prod/force-app/main/default/objects/Task_Dispatcher__c/fields/Task_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Task_Timeout__c</fullName>
    <label>Task Timeout Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>