metadata/sf-prod/force-app/main/default/objects/Task_Dispatcher__c/fields/User_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Role_ID__c</fullName>
    <label>Salesforce User Role ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>