metadata/sf-prod/force-app/main/default/objects/Task_Dispatcher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Assign_to_Users_in_a_Role__c</columns>
    <columns>Backlog_Report_IDs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>